Charts ready for 2023; HRP fix label overlap.

--- a/css/d3chartstylespbihrp-stg.css
+++ b/css/d3chartstylespbihrp-stg.css
@@ -196,7 +196,7 @@ p#pbihrpd3chartTitle {
 	fill: #222;
 	pointer-events: none;
 	font-family: "Arial", sans-serif;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: 700;
 }
 
